# debate_protocol

./: README.md  pyproject.toml
debate_protocol/: component.yaml  run.py  schemas.py
multiagent_debate/: component.yaml  run.py
